Fixed flexbox alignment and section sizing

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap');
 
 :root {
-    --bgcolor: rgb(230, 227, 205);
-    --bgimg: url('../assets/bgimg1.jpg');
+    --bgcolor: rgb(80, 170, 255);
+    --bgimg: url('../assets/bgimg2.jpg');
+    font-size: 12pt;
 }
 
 .blur {
@@ -26,6 +27,7 @@ body, #left-container, #right-container, #logo {
 }
 
 body {
+    z-index: 0;
     height: 100vh;
     width: 100vw;
     background-color: var(--bgcolor);
@@ -43,6 +45,7 @@ a:visited {
 
 
 #left-container {
+    z-index: 50;
     width: 40vw;
     height: 100%;
     background-image: var(--bgimg);
@@ -81,42 +84,59 @@ a:visited {
 }
 
 #right-container {
+    z-index: 100;
     width: 60vw;
     height: 100%;
     flex-flow: column nowrap;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 #top-section {
     display: inherit;
     position: relative;
-    width: inherit;
+    width: auto;
     height: 30vh;
     align-items: center ;
     justify-content: flex-start;
     padding-left: 100px;
+    font-size: max(min(0.5vw, 0.5em), 1rem);
 }
 
 #form-section {
-    display: flex;
-    width: inherit;
-    height: 40vh;
+    display: inherit;
+    width: 60vw;
+    height: auto;
+    padding: 50px 0px;
     box-shadow: 5px 5px 15px 0px black ;
 }
 
+#form-wrapper {
+    display: flex;
+    width: inherit;
+    height: inherit;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-start;
+}
+
 form {
-    display: inherit;
-    align-items: center;
+    width: inherit;
+    height: inherit;
 }
 
 .input-wrap {
     display: flex;
-    position: absolute;
-    flex-flow: column;
     width: 250px;
+    flex-flow: column;
+    padding-left: 100px;
+
 }
 
 label, input {
     margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .input-wrap > input {
@@ -127,12 +147,8 @@ label, input {
     font: inherit;
 }
 
-#form-right {
-    margin-left: 450px;
-}
-
-#form-left {
-    margin-left: 100px;
+input:focus {
+    background-color: aqua;
 }
 
 #bottom-section {
@@ -150,4 +166,12 @@ label, input {
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
     font: inherit;
+}
+
+#submitBtn:hover {
+    box-shadow: 0px 0px 15px;
+}
+
+#submitBtn:active {
+    border: inset 1px;
 }
